feat: 1.调整setAttribute()方法，添加直接设置innerText和innerHTML属性；2. 添加 platform 子模块，提供检测运行平台相关的功能函数；3. 更新 API 文档；

--- a/api/pug/main.pug
+++ b/api/pug/main.pug
@@ -10,6 +10,7 @@ main#main.main
     include ./color/section
     include ./insertion/section
     include ./position/section
+    include ./platform/section
     include ./sibling/section
     include ./size/section
     include ./style/section
