fix: 修复 Opera 浏览器信息检测错误的问题

--- a/api/pug/platform/browser.pug
+++ b/api/pug/platform/browser.pug
@@ -28,3 +28,6 @@ section.section
 
         // Firefox 浏览器中运行
         browser() // -> { name: "Firefox", major: 120, version: "120.0" }
+
+        // Opera
+        browser() // -> {name: 'Opera', major: 105, version: '105.0.0.0'}
