feat: 添加新方法：fullscreen()、getDocument()、getImages()、getWindow()、isWindow()、isNode()、isShadowRoot()

--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -16,6 +16,9 @@ section.section
   include ./getEl
   include ./find
   include ./findAll
+  include ./fullscreen
+  include ./getDocument
+  include ./getImages
   include ./getHostOrParent
   include ./getOffsetParent
   include ./getScrollParent
@@ -28,6 +31,7 @@ section.section
   include ./inBounding
   include ./inViewport
   include ./isMatched
+  include ./isWindow
   include ./matches
   include ./children
   include ./openURL
