--- a/api/pug/types/section.pug
+++ b/api/pug/types/section.pug
@@ -7,4 +7,6 @@ section.section
   include ./isDOM
   include ./isElement
   include ./isFragment
+  include ./isNode
+  include ./isShadowRoot
   include ./isText
