--- a/api/pug/platform/section.pug
+++ b/api/pug/platform/section.pug
@@ -5,7 +5,7 @@ section.section
     p dom.js 提供以下方法用以检测当前运行平台的相关信息。
   include ./isBrowser
   include ./isDeno
-  include ./isNode
+  include ./isNodeJs
   include ./isMobile
   include ./isWebKit
   include ./browser
