chore: 发布 1.6.0 版本

--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -25,6 +25,7 @@ section.section
   include ./getURLProps
   include ./getURLSearchParams
   include ./getURLSearchParamByName
+  include ./getWindow
   include ./toURLSearchParams
   include ./index
   include ./inDocument
