feat: 添加 parents() 和 fragment() 方法；

--- a/api/pug/base/build.pug
+++ b/api/pug/base/build.pug
@@ -8,7 +8,7 @@ section.section
       dt.section__dt Category：
       dd.section__dd Base
     p build() 方法用来将 HTML 字符串解析生成 DOM 节点。
-    p 注意：build() 方法与 html() 方法的不同指出在于 build() 方法返回的是 HTML 字符串解析后生成 DOM 元素，而 html() 方法返回的是包含 HTML 字符串解析后生成 DOM 元素的文档碎片。
+    p 注意：build() 方法与 html() 方法的不同之处在于 build() 方法返回的是 HTML 字符串解析后生成 DOM 元素，而 html() 方法返回的是包含 HTML 字符串解析后生成 DOM 元素的文档碎片。
     h4.section__h4 Parameters
     h5.section__h4 str
     dl.section__dl
