--- a/api/pug/base/parent.pug
+++ b/api/pug/base/parent.pug
@@ -5,7 +5,7 @@ section.section
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Base
-    p matches() 方法用来获取给定 el 元素的父节点。
+    p parent() 方法用来获取给定 el 元素的父节点。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
