--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -16,6 +16,7 @@ section.section
   include ./getEl
   include ./find
   include ./findAll
+  include ./fragment
   include ./fullscreen
   include ./getDocument
   include ./getImages
@@ -37,6 +38,7 @@ section.section
   include ./children
   include ./openURL
   include ./parent
+  include ./parents
   include ./pixel
   include ./serialize
 
