--- a/api/less/aside.less
+++ b/api/less/aside.less
@@ -48,7 +48,7 @@
     overflow: hidden;
   }
 
-  .outline-chapters {
+  .outline-navigator {
     flex: 1;
 
     &__placeholder {
@@ -74,7 +74,7 @@
     }
 
     &_active {
-      &.outline-chapters__anchor {
+      &.outline-navigator__anchor {
         &:link,
         &:visited,
         &:hover {
