docs: 纠正文档中 Platform Detection 模块下的 Category 的名称

--- a/api/pug/platform/isNodeJs.pug
+++ b/api/pug/platform/isNodeJs.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.5.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Platform Detection
     p isNodeJs() 方法用来检测当前运行环境是否为浏览器环境。
     h5.section__h4 Returns
     dl.section__dl
