--- a/api/pug/platform/isWebKit.pug
+++ b/api/pug/platform/isWebKit.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.5.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Platform Detection
     p isWebKit() 方法用来检测当前浏览器内核是否为 WebKit 内核。
     h5.section__h4 Returns
     dl.section__dl
