--- a/api/pug/platform/browser.pug
+++ b/api/pug/platform/browser.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.5.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Platform Detection
     p browser() 方法用来检测浏览器信息，返回浏览器名称和版本信息。
     h5.section__h4 Returns
     dl.section__dl
