--- a/api/pug/platform/isMobile.pug
+++ b/api/pug/platform/isMobile.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.5.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Platform Detection
     p isMobile() 方法用来检测当前运行设备是否为移动设备。
     h5.section__h4 Returns
     dl.section__dl
