--- a/api/pug/platform/os.pug
+++ b/api/pug/platform/os.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.5.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Platform Detection
     p os() 方法用来检测当前操作系统信息，返回操作名称合版本信息。
     h5.section__h4 Returns
     dl.section__dl
