feat: 添加 loadCSS() 和 loadScript() 方法；

--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -27,13 +27,14 @@ section.section
   include ./getURLSearchParams
   include ./getURLSearchParamByName
   include ./getWindow
-  include ./toURLSearchParams
   include ./index
   include ./inDocument
   include ./inBounding
   include ./inViewport
   include ./isMatched
   include ./isWindow
+  include ./loadCSS
+  include ./loadScript
   include ./matches
   include ./children
   include ./openURL
@@ -41,4 +42,5 @@ section.section
   include ./parents
   include ./pixel
   include ./serialize
+  include ./toURLSearchParams
 
