feat: 添加 dnsPrefetch()、prefetch() 和 preload() 方法；

--- a/api/pug/main.pug
+++ b/api/pug/main.pug
@@ -11,6 +11,7 @@ main#main.main
     include ./insertion/section
     include ./position/section
     include ./platform/section
+    include resources/section
     include ./sibling/section
     include ./size/section
     include ./style/section
