--- a/api/pug/resources/loadCSS.pug
+++ b/api/pug/resources/loadCSS.pug
@@ -1,12 +1,12 @@
 section.section
   header.section__header
-    h3.section__h3 loadCSS(cssURL)
+    h3.section__h3 loadCSS(cssURL[, media])
   div.section__content
     h4.section__h4 Since
     p.section__dd 1.7.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Load Resources
     p loadCSS() 方法用来动态向页面中添加外部 css 样式文件。返回 Promise 对象。css 文件加载成功，执行 Promise.resolve()，加载失败则执行 Promise.reject()。
     h4.section__h4 Parameters
     h5.section__h4 cssURL
@@ -14,6 +14,11 @@ section.section
       dt.section__dt Type：
       dd.section__dd String
     p （必须）cssURL 参数指定外部 css 文件的 URL 地址。
+    h5.section__h4 media
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd String
+    p （可选）media 参数指定 CSS 样式适用的媒体信息。
     h5.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
@@ -27,9 +32,11 @@ section.section
          // 引用 loadCSS 单个方法
          import loadCSS from '@yaohaixiao/dom.js/loadCSS'
 
-         dom.loadCSS('path/to/exist.css').then(() => {
+         DOM.loadCSS('path/to/exist.css', 'print').then(($link) => {
            // css 文件加载成功后的相关逻辑
-         ))
+           // $link 是创建的 link 标签 DOM 元素
+           console.log($link)
+         })
 
          loadCSS('path/to/not-exist.css').then(() => {
            // css 文件加载成功后的相关逻辑
