docs: 更新添加方法的 API 文档；

--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -4,8 +4,6 @@ section.section
   div.section__content
     p dom.js 提供以下方法用以创建或查询 DOM 元素等基础 DOM 操作。
   include ./build
-  include ./copyToClipboard
-  include ./createAndDownloadFile
   include ./createElement
   include ./clone
   include ./canPosition
@@ -17,28 +15,20 @@ section.section
   include ./find
   include ./findAll
   include ./fragment
-  include ./fullscreen
   include ./getDocument
   include ./getImages
   include ./getHostOrParent
   include ./getOffsetParent
   include ./getScrollParent
-  include ./getURLProps
-  include ./getURLSearchParams
-  include ./getURLSearchParamByName
   include ./getWindow
+  include ./getVisualViewport
   include ./index
   include ./inDocument
-  include ./inBounding
-  include ./inViewport
+  include ./isLayoutViewport
   include ./isMatched
   include ./isWindow
   include ./matches
   include ./children
-  include ./openURL
   include ./parent
   include ./parents
-  include ./pixel
-  include ./serialize
-  include ./toURLSearchParams
 
