--- a/api/pug/main.pug
+++ b/api/pug/main.pug
@@ -11,10 +11,12 @@ main#main.main
     include ./insertion/section
     include ./position/section
     include ./platform/section
-    include resources/section
+    include ./resources/section
+    include ./rect/section
     include ./sibling/section
     include ./size/section
     include ./style/section
     include ./types/section
+    include ./others/section
 
   include ./footer
