--- a/api/pug/others/copyToClipboard.pug
+++ b/api/pug/others/copyToClipboard.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.4.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Others
     p copyToClipboard() 方法用于复制指定文本内容到粘贴板。
     h4.section__h4 Parameters
     h5.section__h4 str
