--- a/api/pug/others/createAndDownloadFile.pug
+++ b/api/pug/others/createAndDownloadFile.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.4.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Others
     p createAndDownloadFile() 方法用来（通过文本）创建二进制的文件并下载文件。
     h4.section__h4 Parameters
     h5.section__h4 fileName
