--- a/api/pug/others/fullscreen.pug
+++ b/api/pug/others/fullscreen.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.6.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Others
     p 指定（某个DOM元素）进入或者退出全屏模式。
     h4.section__h4 Parameters
     h5.section__h4 mode
