--- a/api/pug/others/getURLProps.pug
+++ b/api/pug/others/getURLProps.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.4.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Others
     p getURLProps() 方法用来解析 URL 地址中的相关属性，返回解析 URL 后的对象数据。
     h4.section__h4 Parameters
     h5.section__h4 url
