--- a/api/pug/others/getURLSearchParams.pug
+++ b/api/pug/others/getURLSearchParams.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.4.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Others
     p getURLSearchParams() 方法用来获取 URL 地址字符串中查询字符串解析后的对象数据。
     h4.section__h4 Parameters
     h5.section__h4 url
