--- a/api/pug/others/openURL.pug
+++ b/api/pug/others/openURL.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.4.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Others
     p openURL() 方法打开指定 URL 页面。
     h4.section__h4 Parameters
     h5.section__h4 url
