--- a/api/pug/others/serialize.pug
+++ b/api/pug/others/serialize.pug
@@ -4,7 +4,7 @@ section.section
   div.section__content
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Others
     p serialize() 方法用来将 Form 表单中的数据序列化为 key/value 的对象数据或者 URL 地址中查询字符串的格式。
     h4.section__h4 Parameters
     h5.section__h4 formElement
