--- a/api/pug/others/toURLSearchParams.pug
+++ b/api/pug/others/toURLSearchParams.pug
@@ -4,7 +4,7 @@ section.section
   div.section__content
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Others
     p toURLSearchParams() 方法用来将普通对象转化成 URL 地址中的查询字符串。
     h4.section__h4 Parameters
     h5.section__h4 o
