--- a/api/pug/types/section.pug
+++ b/api/pug/types/section.pug
@@ -8,5 +8,7 @@ section.section
   include ./isElement
   include ./isFragment
   include ./isNode
+  include ./isOverflowElement
   include ./isShadowRoot
+  include ./isTableElement
   include ./isText
