--- a/api/pug/others/pixel.pug
+++ b/api/pug/others/pixel.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.2.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Others
     p pixel() 方法用来将 CSS 单位值('px')和数值互换。
     h4.section__h4 Parameters
     h5.section__h4 val
