--- a/api/pug/rect/inBounding.pug
+++ b/api/pug/rect/inBounding.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 0.2.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd DOMRect
     p inBounding() 方法用来检测某个 DOM 节点的位置是否在另个一个 DOM 节点范围内。
     h4.section__h4 Parameters
     h5.section__h4 child
