--- a/api/pug/rect/inViewport.pug
+++ b/api/pug/rect/inViewport.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 0.2.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd DOMRect
     p inViewport() 方法用来检测某个 DOM 节点的位置是否在当前视口（当前窗口可见区域）之内。
     h4.section__h4 Parameters
     h5.section__h4 el
