docs: 逐步添加新方法的 API 文档；

--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -15,6 +15,7 @@ section.section
   include ./find
   include ./findAll
   include ./fragment
+  include ./getActiveElement
   include ./getDocument
   include ./getImages
   include ./getHostOrParent
