--- a/api/pug/color/section.pug
+++ b/api/pug/color/section.pug
@@ -4,6 +4,7 @@ section.section
   div.section__content
     p dom.js 提供以下方法用于处理 DOM 元素的颜色值相关的操作。
   include ./getColor
+  include ./randomHexColor
   include ./toHex
   include ./toHSL
   include ./toRGB
