--- a/api/pug/others/section.pug
+++ b/api/pug/others/section.pug
@@ -6,11 +6,14 @@ section.section
   include ./copyToClipboard
   include ./createAndDownloadFile
   include ./fullscreen
+  include ./getSelectedText
   include ./getURLProps
   include ./getURLSearchParams
   include ./getURLSearchParamByName
+  include ./onClickOutside
   include ./openURL
   include ./pixel
+  include ./redirect
   include ./serialize
   include ./toURLSearchParams
 
