docs: 完善 Observer 模块的 API 文档；

--- a/api/pug/main.pug
+++ b/api/pug/main.pug
@@ -17,6 +17,7 @@ main#main.main
     include ./size/section
     include ./style/section
     include ./types/section
+    include ./observer/section
     include ./others/section
 
   include ./footer
