fix: 修复 observeIntersections() 方法中 thresholds 参数名传递错误的问题

--- a/api/pug/observer/observeIntersections.pug
+++ b/api/pug/observer/observeIntersections.pug
@@ -14,16 +14,17 @@ section.section
       dt.section__dt Type：
       dd.section__dd HTMLElement
     p （必须）el 参数指定用作边界盒的元素或文档。如果构造函数未传入 root 或其值为null，则默认使用顶级文档的视口。
-    h5.section__h4 str
+    h5.section__h4 fn
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd String
+      dd.section__dd Function
     p （必须）fn 参数指定 el 元素下需要观察的 DOM 元素出发观察条件时出发的回调函数。
     h5.section__h4 props
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd Object
     p （可选）props 指定传递到 IntersectionObserver() 构造函数的 options 对象。
+
     h5.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
