--- a/api/pug/observer/section.pug
+++ b/api/pug/observer/section.pug
@@ -5,3 +5,4 @@ section.section
     p dom.js 提供以下方法用以处理对 DOM 树或者元素变化进行观察的相关操作。
   include ./observeIntersections
   include ./observeMutations
+  include ./observeResize
