--- a/api/pug/observer/observeResize.pug
+++ b/api/pug/observer/observeResize.pug
@@ -1,13 +1,13 @@
 section.section
   header.section__header
-    h3.section__h3 observeMutations(el, fn[, props = {}])
+    h3.section__h3 observeResize(el, fn)
   div.section__content
     h4.section__h4 Since
-    p.section__dd 1.7.0
+    p.section__dd 1.8.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Observer
-    p observeMutations() 方法是一个通用的 MutationObserver 观察者处理器。
+    p observeMutations() 方法是一个通用的 ResizeObserver 观察者处理器。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
@@ -19,16 +19,11 @@ section.section
       dt.section__dt Type：
       dd.section__dd Function
     p （必须）fn 参数指定 DOM 元素观察的属性发生改变时出发的回调函数。
-    h5.section__h4 props
-    dl.section__dl
-      dt.section__dt Type：
-      dd.section__dd Object
-    p （可选）DOM 元素需要观察的属性。
     h5.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd Object
-    p 返回 MutationObserver 对象（实例）。
+    p 返回 ResizeObserver 对象（实例）。
     pre.section__pre
       code.section__.
         &lt;ul id="list" class="list"&gt;
@@ -40,20 +35,26 @@ section.section
 
         // 引入 DOM 模块（中的所有工具方法）
         import DOM from '@yaohaixiao/dom.js/dom
-        // 引用 observeMutations 单个方法
-        import observeMutations from '@yaohaixiao/dom.js/observeMutations'
+        // 引用 observeResize 单个方法
+        import observeResize from '@yaohaixiao/dom.js/observeResize'
 
         const $list = DOM.getEl('#list')
         const $blog = DOM.getEl('.blog')
 
-        // mr 代表 DOM 元素改变时记录的 MutationRecord 对象
-        DOM.observeMutations($list, (mr) => {
-          console.log('list 发生改变：' mr)
+        // entry 代表 DOM 元素改变时记录的 ResizeObserverEntry 对象
+        DOM.observeMutations($list, (entry) => {
+          console.log('list 发生 resize：' entry)
         })
-        DOM.observeMutations($blog, (mr) => {
-          console.log('blog 发生改变：' mr)
+        DOM.observeMutations($blog, (entry) => {
+          console.log('blog 发生resize：' entry)
         })
 
-        DOM.hide($blog)
-        // -> blog 发生改变：blog 改变记录的 MutationRecord 对象
-        // -> list 发生改变：list 改变记录的 MutationRecord 对象
+        DOM.css($blog, {
+          width: '200px'
+        })
+        // -> blog 发生改变：blog 改变记录的 ResizeObserverEntry 对象
+
+        DOM.css($list, {
+          width: '200px'
+        })
+        // -> list 发生改变：list 改变记录的 ResizeObserverEntry 对象
