--- a/api/pug/observer/observeResize.pug
+++ b/api/pug/observer/observeResize.pug
@@ -1,6 +1,6 @@
 section.section
   header.section__header
-    h3.section__h3 observeResize(el, fn)
+    h3.section__h3 observeResize(el, fn[, delay = 300])
   div.section__content
     h4.section__h4 Since
     p.section__dd 1.8.0
@@ -18,7 +18,15 @@ section.section
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd Function
-    p （必须）fn 参数指定 DOM 元素观察的属性发生改变时出发的回调函数。
+    p （必须）fn 参数指定 DOM 元素观察到发生尺寸改变时出发的回调函数。
+    h5.section__h4 delay
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Number
+    dl.section__dl
+      dt.section__dt Default：
+      dd.section__dd 300
+    p （可选）delay 参数指定 DOM 元素观察到发生尺寸改变时出发的回调函数执行的防抖处理的时间间隔（单位：毫秒）。
     h5.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
