--- a/api/pug/observer/observeResize.pug
+++ b/api/pug/observer/observeResize.pug
@@ -7,7 +7,7 @@ section.section
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Observer
-    p observeMutations() 方法是一个通用的 ResizeObserver 观察者处理器。
+    p observeResize() 方法是一个通用的 ResizeObserver 观察者处理器。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
