--- a/api/pug/observer/section.pug
+++ b/api/pug/observer/section.pug
@@ -1,6 +1,6 @@
 section.section
   header.section__header
-    h2.section__title Others
+    h2.section__title Observer
   div.section__content
     p dom.js 提供以下方法用以处理对 DOM 树或者元素变化进行观察的相关操作。
   include ./observeIntersections
