docs: 完善 getDocumentRect() 和 getViewportRect() 方法的 API 文档；

--- a/api/pug/rect/section.pug
+++ b/api/pug/rect/section.pug
@@ -4,6 +4,8 @@ section.section
   div.section__content
     p dom.js 提供以下方法用以处理 DOMRect 相关的操作。
   include ./getBoundingClientRect
+  include ./getDocumentRect
+  include ./getViewportRect
   include ./inBounding
   include ./inViewport
 
