docs: 完善 1.9.0 版本新添加方法的 API 文档

--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -6,9 +6,7 @@ section.section
   include ./build
   include ./createElement
   include ./clone
-  include ./canPosition
   include ./closet
-  include ./contains
   include ./byClass
   include ./byId
   include ./getEl
@@ -16,19 +14,17 @@ section.section
   include ./findAll
   include ./fragment
   include ./getActiveElement
+  include ./getContainingBlock
   include ./getDocument
   include ./getImages
   include ./getHostOrParent
+  include ./getNodeName
   include ./getOffsetParent
   include ./getScrollParent
+  include ./getTagName
   include ./getWindow
   include ./getVisualViewport
   include ./index
-  include ./inDocument
-  include ./isLayoutViewport
-  include ./isMatched
-  include ./isWindow
-  include ./matches
   include ./children
   include ./parent
   include ./parents
