--- a/api/pug/detect/isLayoutViewport.pug
+++ b/api/pug/detect/isLayoutViewport.pug
@@ -6,7 +6,7 @@ section.section
       p.section__dd 1.7.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Detect
     p isLayoutViewport() 方法用来判断当前视图是否为布局视图。
     h4.section__h4 Returns
     dl.section__dl
