--- a/api/pug/detect/isMatched.pug
+++ b/api/pug/detect/isMatched.pug
@@ -4,7 +4,7 @@ section.section
   div.section__content
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Detect
     p isMatched() 方法用来检测 DOM 节点是否为符合 filter 检测条件的节点。
     h4.section__h4 Parameters
     h5.section__h4 el
