--- a/api/pug/detect/isWindow.pug
+++ b/api/pug/detect/isWindow.pug
@@ -6,7 +6,7 @@ section.section
     p.section__dd 1.6.0
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Base
+      dd.section__dd Detect
     p isWindow() 方法用来检测当前对象是否为 window 对象。
     h4.section__h4 Parameters
     h5.section__h4 o
