--- a/api/pug/main.pug
+++ b/api/pug/main.pug
@@ -8,11 +8,12 @@ main#main.main
     include ./attributes/section
     include ./base/section
     include ./color/section
+    include ./detect/section
+    include ./rect/section
     include ./insertion/section
     include ./position/section
     include ./platform/section
     include ./resources/section
-    include ./rect/section
     include ./sibling/section
     include ./size/section
     include ./style/section
