feat: 调整邻居节点查询相关的所有方法，el 参数支持文本节点类型（以前仅查询邻居节点中的 HTMLElement 节点）；

--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -14,10 +14,19 @@ section.section
   include ./findAll
   include ./fragment
   include ./getActiveElement
+  include ./getAncestorBy
+  include ./getAncestorByClassName
+  include ./getAncestorByTagName
+  include ./getChildren
+  include ./getChildrenBy
   include ./getContainingBlock
   include ./getDocument
+  include ./getFirstChild
+  include ./getFirstChildBy
   include ./getImages
   include ./getHostOrParent
+  include ./getLastChild
+  include ./getLastChildBy
   include ./getNodeName
   include ./getOffsetParent
   include ./getScrollParent
