--- a/api/pug/sibling/getNextSibling.pug
+++ b/api/pug/sibling/getNextSibling.pug
@@ -1,6 +1,6 @@
 section.section
   header.section__header
-    h3.section__h3 getNextSibling(el)
+    h3.section__h3 getNextSibling(el[, isElementSibling])
   div.section__content
     dl.section__dl
       dt.section__dt Category：
