--- a/api/pug/sibling/getNextSibling.pug
+++ b/api/pug/sibling/getNextSibling.pug
@@ -10,15 +10,17 @@ section.section
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd String
-    p （必须）el 参数指定 DOM 元素。
+      dd.section__dd HTMLElement|Text
+    p （必须）el 参数指定 DOM 元素(HTMLElement 或者 Text 类型)。
     h4.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd HTMLElement
-    p 返回 DOM 元素的下一个邻居元素节点。
+      dd.section__dd HTMLElement|Text
+    p 返回 el 元素的下一个邻居元素节点。
     pre.section__pre
       code.section__code.
+        &lt;div class="section"&gt;Section Content&lt;/div&gt;
+        文本内容
         &lt;ul id="list" class="list"&gt;
             &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
             &lt;li class="item blog"&gt;Blog&lt;/li&gt;
@@ -31,8 +33,13 @@ section.section
         // 引用 getNextSibling 单个方法
         import getNextSibling from '@yaohaixiao/dom.js/getNextSibling'
 
-        const $list = DOM.byId('#list')
-        const $home = DOM.byId('#home')
+        const $section = DOM.byClass('.section')
 
-        DOM.getNextSibling($list) // -> null
-        getNextSibling($home) // -> &lt;li class="item"&gt;Blog&lt;/li&gt;
+        // 获取 HTMLElement 邻居节点
+        DOM.next($section) // -> &lt;ul id="list" class="list"&gt;
+
+        // 获取 Text 文本邻居节点
+        const $text = next($section, false) // -> '文本内容'
+
+        // el 参数是 Text 文本节点类型
+        next($text) // -> &lt;ul id="list" class="list"&gt;
