--- a/api/pug/sibling/prev.pug
+++ b/api/pug/sibling/prev.pug
@@ -1,6 +1,6 @@
 section.section
   header.section__header
-    h3.section__h3 prev(el)
+    h3.section__h3 prev(el[, isElementSibling])
   div.section__content
     dl.section__dl
       dt.section__dt Category：
@@ -13,15 +13,25 @@ section.section
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd String
-    p （必须）el 参数指定 DOM 元素。
+    dd.section__dd HTMLElement|Text
+    p （必须）el 参数指定 DOM 元素(HTMLElement 或者 Text 类型)。
+    h5.section__h4 isElementSibling
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Boolean
+    dl.section__dl
+      dt.section__dt Default：
+      dd.section__dd true
+    p （可选）isElementSibling 参数指定是否仅获取 HTMLElement 元素节点，默认值：true。
     h4.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd HTMLElement
-    p 返回 DOM 元素的前一个邻居元素节点。
+      dd.section__dd HTMLElement|Text
+    p 返回 DOM 元素的前一个邻居节点。
     pre.section__pre
       code.section__code.
+        &lt;div class="section"&gt;Section Content&lt;/div&gt;
+        文本内容
         &lt;ul id="list" class="list"&gt;
             &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
             &lt;li class="item blog"&gt;Blog&lt;/li&gt;
@@ -38,6 +48,6 @@ section.section
         const $home = DOM.byId('#home')
         const $blog = DOM.getEl('.blog')
 
-        DOM.prev($list) // -> null
-        prev($home) // -> null
+        DOM.prev($list) // -> &lt;div class="section"&gt;Section Content&lt;/div&gt;
+        prev($list, false) // -> '文本内容'
         prev($blog) // -> &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
