--- a/api/pug/sibling/prevAll.pug
+++ b/api/pug/sibling/prevAll.pug
@@ -1,6 +1,6 @@
 section.section
   header.section__header
-    h3.section__h3 prevAll(el)
+    h3.section__h3 prevAll(el[, isElementSibling])
   div.section__content
     dl.section__dl
       dt.section__dt Category：
@@ -8,20 +8,30 @@ section.section
     dl.section__dl
       dt.section__dt Alias：
       dd.section__dd getPrevSiblings
-    p prevAll() 方法用来获取 DOM 元素的前面所有邻居元素节点。
+    p prevAll() 方法用来获取 DOM 元素的前面所有邻居 HTMLElement 或者文本节点。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd String
-    p （必须）el 参数指定 DOM 元素。
+      dd.section__dd HTMLElement|Text
+    p （必须）el 参数指定 DOM 元素(HTMLElement 或者 Text 类型)。
+    h5.section__h4 isElementSibling
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Boolean
+    dl.section__dl
+      dt.section__dt Default：
+      dd.section__dd true
+    p （可选）isElementSibling 参数指定是否仅获取 HTMLElement 元素节点，默认值：true。
     h4.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd HTMLElement
-    p 返回 DOM 元素的前面所有邻居元素节点的数组，如果没有则返回空数组。
+      dd.section__dd HTMLElement|Text
+    p 返回 DOM 元素的前面所有邻居节点的数组，如果没有则返回空数组。
     pre.section__pre
       code.section__code.
+        &lt;div class="section"&gt;Section Content&lt;/div&gt;
+        文本内容
         &lt;ul id="list" class="list"&gt;
             &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
             &lt;li class="item blog"&gt;Blog&lt;/li&gt;
@@ -37,7 +47,19 @@ section.section
         const $list = DOM.byId('#list')
         const $about = DOM.getEl('.about')
 
-        DOM.prevAll($list) // ->[]
+        // 仅获取 HTMLElement 邻居节点
+        DOM.prevAll($list)
+        // ->[
+        //   &lt;div class="section"&gt;Section Content&lt;/div&gt;
+        // ]
+
+        // 仅获取 HTMLElement 和节点邻居节点
+        DOM.prevAll($list)
+        // ->[
+        //   '文本内容',
+        //   &lt;div class="section"&gt;Section Content&lt;/div&gt;
+        // ]
+
         prevAll($about)
         // -> [
         //   &lt;li class="item"&gt;Projects&lt;/li&gt;,
