--- a/api/pug/sibling/prevBy.pug
+++ b/api/pug/sibling/prevBy.pug
@@ -8,13 +8,13 @@ section.section
     dl.section__dl
       dt.section__dt Alias：
       dd.section__dd getPreviousSibling
-    p prevBy() 方法用来通过过滤器获取 DOM 元素匹配的前面的邻居元素节点。
+    p prevBy() 方法用来通过过滤器获取 DOM 元素匹配的前面的邻居 HTMLElement 或者文本节点。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd String
-    p （必须）el 参数指定 DOM 元素。
+      dd.section__dd HTMLElement|Text
+    p （必须）el 参数指定 DOM 元素(HTMLElement 或者 Text 类型)。
     h5.section__h4 filter
     dl.section__dl
       dt.section__dt Type：
@@ -23,10 +23,12 @@ section.section
     h4.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd HTMLElement
-    p 返回 DOM 元素的下一个邻居元素节点。
+      dd.section__dd HTMLElement|Text
+    p 返回 DOM 元素的下一个邻居节点。
     pre.section__pre
       code.section__code.
+        &lt;div class="section"&gt;Section Content&lt;/div&gt;
+        文本内容
         &lt;ul id="list" class="list"&gt;
             &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
             &lt;li class="item blog"&gt;Blog&lt;/li&gt;
@@ -39,6 +41,7 @@ section.section
         // 引用 prevBy 单个方法
         import prevBy from '@yaohaixiao/dom.js/prevBy'
 
+        const $list = DOM.byId('#list')
         const $about = DOM.byId('#home')
 
         DOM.prevBy($about, '.item.about') // -> &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
@@ -46,3 +49,11 @@ section.section
           return DOM.hasClass(el, 'blog')
         })
         // -> &lt;li class="item blog"&gt;Blog&lt;/li&gt;
+
+        // 获取文本节点类型的邻居节点
+        const $text = prevBy($about, (el) => {
+           return DOM.isText(el)
+        })
+        // -> '文本内容'
+
+        prevBy($text, '.section') // -> &lt;div class="section"&gt;Section Content&lt;/div&gt;
