feat: 添加 detach()、first()、last() 3个新方法

--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -10,6 +10,9 @@ section.section
   include ./byClass
   include ./byId
   include ./getEl
+  include ./first
+  include ./last
+  include ./filter
   include ./find
   include ./findAll
   include ./fragment
