--- a/api/pug/insertion/section.pug
+++ b/api/pug/insertion/section.pug
@@ -13,7 +13,10 @@ section.section
   include ./prepend
   include ./after
   include ./before
+  include ./detach
+  include ./empty
   include ./replace
+  include ./replaceAll
   include ./remove
   include ./unwrap
   include ./wrap
